fix: remove the overflow of the logo image

--- a/src/components/Background/styles.less
+++ b/src/components/Background/styles.less
@@ -4,6 +4,8 @@
   width: 40%;
   height: 100vh;
   background-image: linear-gradient(to bottom, @start-background, @end-background);
+  position: relative;
+  overflow: hidden;
 }
 
 :local(.nknName) {
